# SimulatedAnnealing

./: .gitignore  AlgoThread.h  CMakeLists.txt  Graph.h  LICENSE  Prony.cpp  Prony.h  README.md  main.cpp  testFuncOpt.cpp  testFuncOpt.h
lib/truncated_normal/: CMakeLists.txt  truncated_normal.hpp
src/: AlgoThread.h  CMakeLists.txt  DispThread.h  Graph.cpp  Graph.h  funcOpt.h  main.cpp  truncated_normal.cpp
